# SlicerPlayground

./: .gitignore  CMakeLists.txt
Data/: FirstPersonView.mrb  ModelToReferenceCreator.mrb  TumorModel.vtk
PlaygroundCpp/: CMakeLists.txt  qSlicerPlaygroundCppModule.cxx  qSlicerPlaygroundCppModule.h  qSlicerPlaygroundCppModuleWidget.cxx  qSlicerPlaygroundCppModuleWidget.h
PlaygroundCpp/Logic/: CMakeLists.txt  vtkSlicerPlaygroundCppLogic.cxx  vtkSlicerPlaygroundCppLogic.h
PlaygroundCpp/Resources/: qSlicerPlaygroundCppModule.qrc
PlaygroundCpp/Resources/UI/: qSlicerPlaygroundCppFooBarWidget.ui  qSlicerPlaygroundCppModuleWidget.ui
PlaygroundCpp/Widgets/: qSlicerPlaygroundCppFooBarWidget.cxx  qSlicerPlaygroundCppFooBarWidget.h
PlaygroundPy/: CMakeLists.txt  PlaygroundPy.py
